[gd_scene load_steps=2 format=3 uid="uid://wnht6jlqxxxu"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_6ie76"]

[node name="Pause Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_6ie76")

[node name="Resume" type="Button" parent="."]
process_mode = 2
layout_mode = 0
offset_left = 218.0
offset_top = 128.0
offset_right = 410.0
offset_bottom = 162.0
text = "Resume"

[node name="Restart" type="Button" parent="."]
process_mode = 2
layout_mode = 0
offset_left = 220.0
offset_top = 178.0
offset_right = 408.0
offset_bottom = 212.0
text = "Restart Level
"

[node name="Main Menu" type="Button" parent="."]
process_mode = 2
layout_mode = 0
offset_left = 219.0
offset_top = 228.0
offset_right = 409.0
offset_bottom = 262.0
text = "Main Menu
"

[node name="Quit" type="Button" parent="."]
process_mode = 2
layout_mode = 0
offset_left = 219.0
offset_top = 278.0
offset_right = 409.0
offset_bottom = 312.0
text = "Quit"

[node name="Volume_Slider" type="HSlider" parent="."]
process_mode = 2
layout_mode = 0
offset_left = 198.0
offset_top = 321.0
offset_right = 428.0
offset_bottom = 337.0
value = 50.0

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="Volume_Slider" to="." method="_on_volume_slider_value_changed"]
